# chameleon

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY.md  about.toml  deny.toml  rustfmt.toml  todo.md
.cargo/: audit.toml
.github/: ci.yml  dependabot.yml  ranger.yaml  stale.yml
.github/workflows/: ci-web.yml  ci.yml
config/: default.toml  development.toml
db/: V10__Alter_users.sql  V11__Remove_app_blessed.sql  V12__Post_attachments.sql  V13__Create_orbits.sql  V14__Add_post_titles.sql  V15__Add_user_created_at.sql  V16__Update_event_constraint.sql  V17__Add_orbit_ext_uris.sql  V18__Add_orbit_keys.sql  V19__Add_user_updated_at.sql  V1__Create_users_and_posts.sql  V20__Create_tombstones.sql  V21__Add_orbit_fediverse_id.sql  V2__Create_user_sessions_and_apps.sql  V3__Create_followers.sql  V4__Create_jobs.sql  V5__Create_user_likes.sql  V6__Create_comments.sql  V7__Create_events.sql  V8__Alter_apps.sql  V9__Alter_users.sql
deployment/open/: README.md  nginx.conf
docs/: database-migrations.md  license.hbs  local-testing.md
docs/config/orbit-2/: nginx.conf
load-tests/: locustfile.py  requirements.txt
public/html/: oauth-authorize-app-err.html  oauth-authorize.html
public/static/: browserconfig.xml
public/static/styles/: styles.css
src/: main.rs  worker.rs
src/activitypub/: activity.rs  activity_convertible.rs  activity_type.rs  actor.rs  collection.rs  context.rs  document.rs  helpers.rs  image.rs  json_ld.rs  key.rs  link.rs  mod.rs  note.rs  object.rs  orbit.rs  ordered_collection.rs  place.rs  profile.rs  question.rs  rdf_string.rs  reference.rs  relationship.rs  tombstone.rs
src/aws/: clients.rs
src/cdn/: cdn_file_store.rs  cdn_s3_store.rs  cdn_store.rs  mod.rs
src/db/: app_repository.rs  comment_repository.rs  count_global_federated_feed.sql  count_user_federated_feed.sql  count_user_own_feed.sql  count_user_public_feed.sql  event_repository.rs  fetch_global_federated_feed.sql  fetch_post.sql  fetch_post_comments.sql  fetch_user_federated_feed.sql  fetch_user_own_feed.sql  fetch_user_public_feed.sql  fetch_user_stats.sql  follow_repository.rs  job_repository.rs  like_repository.rs  mod.rs  orbit_moderator_repository.rs  orbit_repository.rs  post_attachment_repository.rs  post_repository.rs  repositories.rs  repository.rs  session_repository.rs  tombstone_repository.rs  traits.rs  user_orbit_repository.rs  user_repository.rs  user_stats_repository.rs
src/db/sql/: count_orbit_feed.sql  count_user_federated_feed.sql  count_user_friend_feed.sql  count_user_own_feed.sql  count_user_public_likes_feed.sql  fetch_global_federated_feed.sql  fetch_orbit_feed.sql  fetch_post.sql  fetch_post_comment.sql  fetch_post_comments.sql  fetch_post_comments_count.sql  fetch_post_from_uri.sql  fetch_user_federated_feed.sql  fetch_user_friend_feed.sql  fetch_user_own_feed.sql  fetch_user_public_feed.sql  fetch_user_public_likes_feed.sql
src/federation/: activitypub.rs
src/federation/activitypub/: actor.rs  article.rs  federate.rs  group.rs  mod.rs  note.rs  object.rs  person.rs  util.rs
src/helpers/: activitypub.rs  api.rs  auth.rs  core.rs  handlers.rs  html.rs  math.rs  mod.rs  types.rs
src/job/: clean_jobs.rs  convert_new_post_images.rs  create_boost_event.rs  create_boost_events.rs  create_event.rs  create_events.rs  create_post_event.rs  create_post_events.rs  delete_boost_events.rs  delete_post.rs  federate_activitypub.rs  federate_activitypub_ext.rs  mod.rs  refresh_external_orbit.rs  refresh_external_orbits.rs  refresh_external_profile.rs  refresh_external_profiles.rs
src/logic/: app.rs  comment.rs  follow.rs  job.rs  like.rs  mod.rs  post.rs  user.rs
src/model/: access_type.rs  app.rs  comment.rs  comment_pub.rs  event.rs  event_type.rs  follow.rs  job.rs  like.rs  mod.rs  orbit.rs  orbit_moderator.rs  orbit_pub.rs  post.rs  post_attachment.rs  post_create_request.rs  post_event.rs  post_pub.rs  queue_job.rs  response.rs  session.rs  tombstone.rs  user.rs  user_account_pub.rs  user_orbit.rs  user_stats.rs  webfinger.rs
src/net/: http_sig.rs  jwt.rs  jwt_session.rs  jwt_session_err.rs  jwt_session_inner.rs  mod.rs  templates.rs
src/queue/: mod.rs  queue.rs  queue_backend_sqs.rs
src/rabbitmq/: clients.rs
src/routes/: activitypub.rs  apps.rs  comment.rs  follow.rs  host_meta.rs  job.rs  like.rs  mod.rs  nodeinfo.rs  oauth.rs  orbit.rs  post.rs  public.rs  redirect.rs  search.rs  status.rs  user.rs  webfinger.rs
src/scheduled_tasks/: mod.rs  scheduler.rs  task_trigger_clean_jobs_event.rs  task_trigger_refresh_external_orbits_event.rs  task_trigger_refresh_external_profiles_event.rs
src/settings/: mod.rs
src/work_queue/: mod.rs  queue.rs  queue_backend_noop.rs  queue_backend_rabbitmq.rs  queue_backend_sqs.rs
src/worker_internal/: services.rs
tests/: federate-to-shared-inbox  federate-to-shared-inbox.json
ui-ios/Chameleon.xcodeproj/: project.pbxproj
ui-ios/Chameleon/Core/: AppDelegate.swift  Config.swift  Container.swift  UIKitExtensions.swift
ui-ios/Chameleon/Data/: Result.swift  Session.swift
ui-ios/Chameleon/Resources/: Info.plist
ui-ios/Chameleon/ViewControllers/: HomeViewController.swift  MainViewController.swift  MessagesViewController.swift  OnboardingLoginViewController.swift  OnboardingViewController.swift  ProfileViewController.swift  SearchViewController.swift  SessionTransitionViewController.swift
ui-ios/Chameleon/ViewModels/: OnboardingLoginViewModel.swift  OnboardingViewModel.swift  SessionTransitionViewModel.swift
ui-ios/Chameleon/Views/: BigButton.swift  PostViewCell.swift  (+1 more)
ui-web/: .eslintrc.json  .gitignore  next.config.js  package.json  tsconfig.json
ui-web/core/: api.ts  config.ts  useBlurhash.ts  utils.ts
ui-web/pages/: Home.module.css  _app.tsx  _document.tsx  index.tsx  new-orbit.tsx  new-post.tsx  profile.tsx  search.tsx
ui-web/public/: site.webmanifest
ui-web/styles/: globals.css  globals.scss
(+196 files in other folders)
