[package]
name = "chameleon"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false
repository = "https://github.com/lyptt/chameleon"
homepage = "https://github.com/lyptt/chameleon"

[[bin]]
name = "chameleon"
path = "src/main.rs"

[[bin]]
name = "chameleon-worker"
path = "src/worker.rs"

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_qs = "0.10.1"
config = "0.13.3"
lazy_static = "1.4.0"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "macros",
  "migrate",
  "uuid",
  "json",
] }
env_logger = "0.10.0"
log = "0.4.17"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.1"
chrono = { version = "0.4.23", features = [
  "clock",
  "std",
  "wasmbind",
  "serde",
], default-features = false }
async-trait = "0.1.59"
tokio = { version = "1.22.0", features = ["macros", "process"] }
actix-easy-multipart = "3.0.0"
uuid = { version = "1.2.2", features = ["std", "serde", "v4"] }
num-traits = "0.2"
once_cell = "1.16.0"
mime = "0.3.16"
aws-types = "0.51.0"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
aws-sdk-sqs = "0.21.0"
jsonwebtoken = "8.1.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
futures-util = "0.3.25"
handlebars = "4.3.5"
argon2 = "0.4.1"
markdown = "1.0.0-alpha.4"
tempfile = "3.3.0"
aws-smithy-http = "0.51.0"
blurhash = "0.1.1"
image = "0.24.5"
lapin = "2.1.1"

[dev-dependencies]
mockall = "0.11.3"
async-std = { version = "1.12.0", features = ["attributes"] }
temp-env = "0.3.1"
