[package]
name = "chameleon"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false
repository = "https://github.com/lyptt/chameleon"
homepage = "https://github.com/lyptt/chameleon"

[[bin]]
name = "chameleon"
path = "src/main.rs"

[[bin]]
name = "chameleon-worker"
path = "src/worker.rs"

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serde_qs = "0.10.1"
config = "0.13.3"
lazy_static = "1.4.0"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "macros",
  "migrate",
  "uuid",
  "json",
] }
env_logger = "0.10.0"
log = "0.4.17"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.1"
chrono = { version = "0.4.23", features = [
  "clock",
  "std",
  "wasmbind",
  "serde",
], default-features = false }
async-trait = "0.1.59"
tokio = { version = "1.23.0", features = ["macros", "process"] }
actix-easy-multipart = "3.0.0"
uuid = { version = "1.2.2", features = ["std", "serde", "v4"] }
num-traits = "0.2"
once_cell = "1.16.0"
mime = "0.3.16"
aws-types = "0.52.0"
aws-config = "0.52.0"
aws-smithy-http = "0.52.0"
aws-sdk-s3 = "0.22.0"
aws-sdk-sqs = "0.22.0"
jsonwebtoken = "8.2.0"
sha2 = { version = "0.10.6", features = ["oid"] }
hex = "0.4.3"
rand = "0.8.5"
futures-util = "0.3.25"
handlebars = "4.3.5"
argon2 = "0.4.1"
markdown = "1.0.0-alpha.5"
tempfile = "3.3.0"
blurhash = "0.1.1"
image = "0.24.5"
lapin = "2.1.1"
reqwest = { version = "0.11.13", default-features = false, features = [
  "json",
  "rustls-tls",
] }
typed-builder = "0.11.0"
rsa = "0.7.2"
gravatar = "0.2.0"
regex = "1.7.0"
url = "2.3.1"
base64 = "0.20.0"
http-signing = { git = "https://github.com/lyptt/http-signing.git", rev = "aa354b55ba948325a7fa633713b2bddf0a7685de", features = [
  "rsa",
], default-features = false }
http = "0.2.8"

[dev-dependencies]
mockall = "0.11.3"
async-std = { version = "1.12.0", features = ["attributes"] }
temp-env = "0.3.1"
